# bistro

./: .gitignore  .merlin  .ocamlinit  Changes  Makefile  README.md  TODO  TUTORIAL.md  _oasis  _tags  bistro-bio.opam  bistro.opam  dune-project  index.html  myocamlbuild.ml  opam  setup.ml
app/: bistro_demo.ml  bistro_main.ml  bistro_server.ml  bistro_test.ml  bistro_test_app.ml  dune  jbuild  sacCer2_pho4.ml
bistro/: index.html
bistro.bioinfo/: index.html
bistro.bioinfo/Bistro_bioinfo/: index.html
bistro.bioinfo/Bistro_bioinfo__Bed/: index.html
bistro.bioinfo/Bistro_bioinfo__Bedtools/: index.html
bistro.bioinfo/Bistro_bioinfo__Bowtie/: index.html
bistro.bioinfo/Bistro_bioinfo__Bowtie2/: index.html
bistro.bioinfo/Bistro_bioinfo__ChIPQC/: index.html
bistro.bioinfo/Bistro_bioinfo__Deeptools/: index.html
bistro.bioinfo/Bistro_bioinfo__Defs/: index.html
bistro.bioinfo/Bistro_bioinfo__Deseq2/: index.html
bistro.bioinfo/Bistro_bioinfo__Ensembl/: index.html
bistro.bioinfo/Bistro_bioinfo__FastQC/: index.html
bistro.bioinfo/Bistro_bioinfo__Fastq/: index.html
bistro.bioinfo/Bistro_bioinfo__Fastq_screen/: index.html
bistro.bioinfo/Bistro_bioinfo__Htseq/: index.html
bistro.bioinfo/Bistro_bioinfo__Jaspar/: index.html
bistro.bioinfo/Bistro_bioinfo__Macs/: index.html
bistro.bioinfo/Bistro_bioinfo__Macs2/: index.html
bistro.bioinfo/Bistro_bioinfo__Meme_suite/: index.html
bistro.bioinfo/Bistro_bioinfo__Misc/: index.html
bistro.bioinfo/Bistro_bioinfo__Prokka/: index.html
bistro.bioinfo/Bistro_bioinfo__Samtools/: index.html
bistro.bioinfo/Bistro_bioinfo__Spades/: index.html
bistro.bioinfo/Bistro_bioinfo__Sra/: index.html
bistro.bioinfo/Bistro_bioinfo__Sra_toolkit/: index.html
bistro.bioinfo/Bistro_bioinfo__Srst2/: index.html
bistro.bioinfo/Bistro_bioinfo__Std/: index.html
bistro.bioinfo/Bistro_bioinfo__Tophat/: index.html
bistro.bioinfo/Bistro_bioinfo__Ucsc_gb/: index.html
bistro.engine/: index.html
bistro.engine/Bistro_engine/: index.html
bistro.engine/Bistro_engine__Allocator/: index.html
bistro.engine/Bistro_engine__Db/: index.html
bistro.engine/Bistro_engine__Scheduler/: index.html
bistro.ppx/: index.html
bistro.ppx/Ppx_bistro/: index.html
bistro.tdag/: index.html
bistro.utils/: index.html
doc/: Makefile  basics.rst  conf.py  getting-started.rst  index.rst  installing-docker.rst  ocaml-primer.rst  wrapping.rst
engine/: db.ml  db.mli  scheduler.ml  scheduler.mli
etc/: Dockerfile  META.ab  bistro-mode.el  docgen.sh
examples/: chipseq.ml  diamond.ml  dune  fail.ml  jbuild  lobel.ml  minimal.ml  ngs_qc.ml  nlp_demo.ml  rnaseq.ml  sacCer2_pho4.ml  word_freq.bs  workflow_example.ml  zhou2011.ml  zhou2018.ml
lib/: bistro.ml  bistro.mli  bistro_std.ml  dune  jbuild
lib/lang/: dune  env.ml  env.mli  interpreter.ml  interpreter.mli  lambda.ml  lambda.mli  lang_parser.mly  lexer.mll  parser.ml  parser.mli  parser.mly  parsetree.mli  run_main.ml  shell_ast.ml  shell_ast.mli  typedtree.ml  typedtree.mli
misc/: README.md  dune-project
old_version/: Makefile  TODO  _oasis  _tags  myocamlbuild.ml
ppx/: bistro_script.ml  dune  jbuild  ppx_bistro.ml  script_parser.ml
src/: bistro.ml  bistro.mli  test.ml  test_ppx_bistro.ml
std/: bed.mli  bedtools.ml  bowtie.ml  bowtie.mli  bowtie2.mli  deseq2.ml  deseq2.mli  experiment_description.ml  fastQC.ml  fastQC.mli  htseq.ml  htseq.mli  macs.ml  macs.mli  macs2.ml  macs2.mli  meme_suite.ml  misc.ml  misc.mli  samtools.ml  samtools.mli  sra.ml  sra.mli  sra_toolkit.ml  sra_toolkit.mli  tophat.ml  tophat.mli  types.ml  ucsc_gb.ml  ucsc_gb.mli  unix_utils.ml  unix_utils.mli
test/: accordion.ml  dune  fail.ml  ifelse.ml  multinode.ml  ocamlscript.ml  prime_tdag.ml  template.md  test.ml  test1.ml  test2.ml  test_collect.ml  test_gc.ml  test_ppx.ml  test_ppx_bistro.ml  test_script.ml  trywith.ml
(+795 files in other folders)
