opam-version: "1.2"
name: "bistro"
version: "dev"
maintainer: "Philippe Veber <philippe.veber@gmail.com>"
authors: "Philippe Veber <philippe.veber@gmail.com>"
homepage: "https://github.com/pveber/bistro/"
dev-repo: "https://github.com/pveber/bistro.git"
bug-reports: "https://github.com/pveber/bistro/issues"
license: "GPL"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build & >= "1.0+beta8"}
  "core" {>= "0.9.0"}
  "lwt"
  "ocamlgraph" {>= "1.8.7"}
  "ppx_sexp_conv"
  "rresult"
  "sexplib" {>= "113.24.00"}
  "tyxml" {>= "4.0"}
]
available: [
  ocaml-version >= "4.03.0"
]
