(library
  (name bistro_lang)
  (public_name bistro.lang)
  (inline_tests)
  (modules_without_implementation parsetree)
  (libraries cmdliner menhirLib)
  (preprocess (pps ppx_expect)))

(menhir
 (modules lang_parser)
 (flags --table))

(ocamllex lexer)

;; No built-in support for Menhir's parser messages yet

(rule
 (with-stdout-to
  lang_parser.messages.new
  (run menhir %{dep:lang_parser.mly} --list-errors --explain --list-errors)))

(rule
 (with-stdout-to
  lang_parser_errors.ml
  (run
   menhir
   %{dep:lang_parser.mly}
   --compile-errors
   %{dep:lang_parser.messages})))

(rule
 (with-stdout-to
  lang_parser.messages.updated
  (run
   menhir
   %{dep:lang_parser.mly}
   --update-errors
   %{dep:lang_parser.messages})))

(rule
 (alias update-lang-parser-messages)
 (action
  (diff lang_parser.messages lang_parser.messages.updated)))

(rule
 (alias create-lang-parser-messages)
 (action
  (diff lang_parser.messages lang_parser.messages.new)))
